# Kefcatic

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  frontend_plan.md  plan.md
backend/: .gitignore  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_marketplace.py
backend/app/: main.py
backend/app/api/: approvals.py  assistants.py  audit.py  auth.py  connectors.py  health.py  marketplace.py  memories.py  stream.py  tasks.py  templates.py
backend/app/connectors/: __init__.py  base.py  discord.py  gmail.py  google_calendar.py  google_drive.py  google_sheets.py  hubspot.py  oauth_helper.py  slack.py  youtube.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  action.py  approval.py  assistant.py  base.py  connector.py  marketplace.py  memory.py  models.py  policy.py  task.py  trigger.py  user.py
backend/app/schemas/: __init__.py  approval.py  assistant.py  audit.py  auth.py  common.py  connector.py  marketplace.py  memory.py  task.py  template.py
backend/app/seeds/: default_templates.py
backend/tests/: _connector_mock.py  conftest.py  test_action_engine.py  test_approvals.py  test_connector_base.py  test_connectors_registry.py  test_discord.py  test_gmail_drive.py  test_google_calendar.py  test_google_sheets.py  test_health.py  test_hubspot.py  test_llm_service.py  test_phase3_connectors.py  test_phase3_memories.py  test_phase3_templates.py  test_phase4_marketplace.py  test_slack.py
(+75 files in other folders)
